force-app/main/default/objects/Financial_Account_Permission__c/Financial_Account_Permission__c.object-meta.xml
<CustomObject>
    <description>CDCS-70 Junction object representing that the specific user/contact has the access to a specific type of service on a specific financial account.</description>
    <label>Financial Account Permission</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Financial Account Permission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Account Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>