force-app/main/default/objects/Financial_Account_Permission__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDCS-70 This field determines if the permission is active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>