force-app/main/default/objects/Financial_Account_Permission__c/fields/Authorized_Person__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>CDCS-70 This field links financial account permission to the person who was granted permission.</description>
    <label>Authorized Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Financial Account Permissions</relationshipLabel>
    <relationshipName>Financial_Account_Permissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>