force-app/main/default/objects/Financial_Account_Permission__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>CDCS-70 This field links financial account permission to the financial account on which permission is granted.</description>
    <label>Financial Account</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>Financial Account Permissions</relationshipLabel>
    <relationshipName>Financial_Account_Permissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>