force-app/main/default/objects/Financial_Account_Permission__c/fields/Financial_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Number__c</fullName>
    <formula>Financial_Account__r.External_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Account Number</label>
    <type>Text</type>
</CustomField>