force-app/main/default/objects/Financial_Account_Permission__c/fields/Permission__c.field-meta.xml
<CustomField>
    <fullName>Permission__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Type</label>
    <referenceTo>Permissions__c</referenceTo>
    <relationshipLabel>Financial Account Permissions</relationshipLabel>
    <relationshipName>Financial_Account_Permissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>