force-app/main/default/objects/Financial_Account_Permission__c/validationRules/Lock_Active_Permission.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Active_Permission</fullName>
    <active>true</active>
    <description>Permission has to be deactivated before update</description>
    <errorConditionFormula>AND(
   Active__c = True,
   OR(
      ISCHANGED( Authorized_Person__c ),
      ISCHANGED( Financial_Account__c ),
      ISCHANGED( Permission__c )
   )
)</errorConditionFormula>
    <errorMessage>Permission has to be deactivated before it can be edited</errorMessage>
</ValidationRule>