force-app/main/default/objects/Financial_Account_Permission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Financial_Account__c</columns>
    <columns>Financial_Account_Number__c</columns>
    <columns>Authorized_Person__c</columns>
    <columns>Permission__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>