force-app/main/default/objects/Financial_Account_Permission__c/listViews/MAU_Financial_Account_Approval_Financial_Account_Permission.listView-meta.xml
<ListView>
    <fullName>MAU_Financial_Account_Approval_Financial_Account_Permission</fullName>
    <filterScope>Queue</filterScope>
    <label>MAU Financial Account Approval</label>
    <queue>MAU_Financial_Account_Approval</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>